# fast-forward-indexes

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  setup.cfg
.github/workflows/: check_types.yml  deploy-docs.yml  lint-and-test.yml  lint.yml  make_docs.yml  publish_pypi.yml  run_tests.yml
docs/: index.html
docs/1/: index.html
docs/1/merge/: search.js
docs/1/merge/fast_forward/: index.html  ranking.html
docs/1/merge/fast_forward/index/: index.html  memory.html
docs/main/: fast_forward.html  search.js
docs/main/fast_forward/: encoder.html  index.html  indexer.html  quantizer.html  ranking.html  util.html
docs/main/fast_forward/index/: disk.html  index.html  memory.html
docs/main/fast_forward/quantizer/: index.html  nanopq.html
docs/main/fast_forward/util/: index.html  pyterrier.html
docs/v0.1.0/fast_forward/: util.html
docs/v0.2.0/fast_forward/: index.html  ranking.html  util.html
docs/v0.2.0/fast_forward/index/: disk.html  index.html  memory.html
docs/v0.2.0/fast_forward/util/: index.html
docs/v0.2.1/: fast_forward.html
docs/v0.2.1/fast_forward/: index.html  indexer.html  ranking.html
docs/v0.2.1/fast_forward/index/: index.html
docs/v0.2.1/fast_forward/util/: index.html
docs/v0.3.0/: search.js
docs/v0.3.0/fast_forward/: ranking.html
docs/v0.3.0/fast_forward/index/: disk.html  index.html  memory.html
docs/v0.3.0/fast_forward/quantizer/: index.html
docs/v0.3.0/fast_forward/util/: index.html
docs/v0.3.1/: fast_forward.html
docs/v0.3.1/fast_forward/: encoder.html  indexer.html  quantizer.html  ranking.html  util.html
docs/v0.3.1/fast_forward/index/: disk.html  index.html  memory.html
docs/v0.3.1/fast_forward/quantizer/: index.html
docs/v0.3.1/fast_forward/util/: index.html
docs/v0.4.0/: search.js
docs/v0.4.0/fast_forward/: index.html  util.html
docs/v0.4.0/fast_forward/index/: index.html
docs/v0.4.0/fast_forward/quantizer/: index.html  nanopq.html
docs/v0.4.0/fast_forward/util/: index.html  pyterrier.html
docs/v0.4.1/: search.js
docs/v0.4.1/fast_forward/: encoder.html  indexer.html
docs/v0.4.1/fast_forward/index/: disk.html  index.html
docs/v0.4.1/fast_forward/quantizer/: index.html
docs/v0.4.1/fast_forward/util/: index.html
docs/v0.5.0/: fast_forward.html
docs/v0.5.0/fast_forward/: index.html  indexer.html  util.html
docs/v0.5.0/fast_forward/index/: disk.html  index.html
docs/v0.5.0/fast_forward/quantizer/: index.html
docs/v0.5.0/fast_forward/util/: index.html  pyterrier.html
docs/v0.5.1/: search.js
docs/v0.5.1/fast_forward/: index.html
docs/v0.5.1/fast_forward/index/: index.html
docs/v0.5.1/fast_forward/quantizer/: index.html
docs/v0.5.1/fast_forward/util/: index.html
docs/v0.6.0/: fast_forward.html  search.js
docs/v0.6.0/fast_forward/: quantizer.html  util.html
docs/v0.6.0/fast_forward/util/: index.html  pyterrier.html
docs/v0.7.0/: search.js
docs/v0.7.0/fast_forward/: quantizer.html
docs/v0.7.0/fast_forward/util/: index.html
docs/v0.7.1/: fast_forward.html
docs/v0.7.1/fast_forward/: util.html
docs/v0.7.1/fast_forward/util/: index.html
docs/v0.8.0/fast_forward/: index.html  quantizer.html
docs/v0.8.0/fast_forward/util/: index.html  pyterrier.html
fast_forward/: __init__.py  encoder.py  index.py  indexer.py  quantizer.py  ranking.py  util.py
fast_forward/docs/: index.md  indexer.md  main.md  quantizer.md  ranking.md  util.md
fast_forward/examples/: create_index_from_pyserini.py  interpolate.py
fast_forward/index/: __init__.py  disk.py  in_memory_index.py  memory.py  on_disk_index.py
fast_forward/quantizer/: __init__.py  nanopq.py
fast_forward/util/: __init__.py  pyterrier.py
latest/: fast_forward.html  index.html  search.js
latest/fast_forward/: encoder.html  index.html  ranking.html  util.html
src/fast_forward/: __init__.py  encoder.py  indexer.py  ranking.py
src/fast_forward/docs/: encoder.md  index.md  indexer.md  main.md  pyterrier.md  quantizer.md  ranking.md  util.md
src/fast_forward/encoder/: __init__.py  base.py  transformer.py
src/fast_forward/index/: __init__.py  base.py  disk.py  memory.py  util.py
src/fast_forward/quantizer/: __init__.py  base.py  nanopq.py
src/fast_forward/util/: __init__.py  indexer.py  pyterrier.py
tests/: _constants.py  test_encoder.py  test_index.py  test_indexer.py  test_quantizer.py  test_ranking.py  test_util.py
