[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-forward-indexes"
description = "Efficient interpolation-based ranking on CPUs"
authors = [
    {name = "Jurek Leonhardt"},
]
version = "0.3.1"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["information retrieval", "ranking", "search"]
requires-python = ">= 3.8"
dependencies = [
    "torch >= 2.0.0, < 3",
    "numpy >= 1.24.0, < 2",
    "pandas >= 2.0.3, < 3",
    "transformers >= 4.28.0, < 5",
    "h5py >= 3.0.0, < 4",
    "tqdm >= 4.66.0, < 5",
    "nanopq >= 0.2.1, < 0.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
pyterrier = ["python-terrier >= 0.10.0, < 1"]

[project.urls]
Repository = "https://github.com/mrjleo/fast-forward-indexes"
Documentation = "https://mrjleo.github.io/fast-forward-indexes/docs/"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
