[metadata]
name = fast-forward-indexes
description = Efficient interpolation-based ranking on CPUs
author = Jurek Leonhardt
version = attr: fast_forward.__version__
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrjleo/fast-forward-indexes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    torch >=1.8.2
    numpy >=1.20.3
    transformers >=4.9.0
    scipy >=1.7.3
    tqdm

[options.packages.find]
where = .
exclude = tests
